--- a/fr/JANKEN.html
+++ b/fr/JANKEN.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Janken Game - IchigoJam</title>
+<title>Jeu Janken - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Hand Game (Janken)</h1>
+<h1>Jeu de la Main (Janken)</h1>
 
 <section>
-Janken famously known as Rock Paper Scissor often used as a fair choosing method is a hand game using three hand signs.<br>
-- Gu: (rock) simply ball your hand up into a fist. (Gu wins Choki)<br>
-- Choki: (scissors) use two fingers to mimic the shape. (Choki wins Pa)<br>
-- Pa: (paper) extend your hand palm down.. (Pa wins Gu)<br>
+Janken, connu sous le nom de 'Roc Papier Ciseaux', souvent utilisé comme méthode de choix équitable, est un jeu de mains utilisant trois signes de la main.<br>
+- Gu : (Roc) mettez simplement votre main dans un poing. (Roc gagne Ciseaux)<br>
+- Choki: (Ciseaux) utilisez deux doigts pour imiter la forme. (Ciseaux gagne Papier)<br>
+- Pa: (papier) étendez votre paume de main vers le bas.. (Papier gagne Roc)<br>
 <br>
-Use random command with number 3 if you want to decide Gu, Choki or Pa by your computer.
+Utilisez la commande aléatoire avec le numéro 3 si vous voulez décider Gu, Choki ou Pa par votre ordinateur.
 <div id="list1"></div><script>make15("list1", "?RND(3)")</script>
-For instance 0 means Gu, 1 means Choki, 2 means Pa.
+Par exemple 0 signifie Gu, 1 signifie Choki, 2 signifie Pa.
 </section>
 
 <section>
@@ -25,12 +25,12 @@ For instance 0 means Gu, 1 means Choki, 2 means Pa.
 40 IF A=2 ?"PA"
 RUN
 */}))</script>
-Try to type RUN or press F5 key repeatedly!<br>
-Press F5 key and say your hand sign to fight after your call "Jan ken"!
+Essayez de taper RUN ou appuyez plusieurs fois sur la touche F5 !<br>
+Appuyez sur la touche F5 et dites votre signe de la main pour combattre après votre appel (jouer) « Jan ken » !
 </section>
 
 <section>
-Try to judge by computer.
+Essayez de juger par ordinateur.
 <div id="list3"></div><script>make15("list3", f2s(function() {/*
 15 INPUT "YOUR HAND?",B
 16 IF B=0 ?"GU - ";
@@ -43,10 +43,10 @@ Try to judge by computer.
 </section>
 
 <section>
-<b>Let's try!</b><br>
-1. Try to fight your friend's computer program!<br>
-2. Try to create the weakest computer!<br>
-3. Try to create Janken game with 3 players, you and 2 computers!<br>
+<b>Essayez-le!</b><br>
+1. Essayez de combattre le programme informatique de votre ami !<br>
+2. Essayez de créer l'ordinateur le plus faible !<br>
+3. Essayez de créer un jeu Janken avec 3 joueurs, vous et 2 ordinateurs !<br>
 </section>
 
 <div id="credit"><a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a> <a href="https://github.com/IchigoJam/print/">IchigoJam print</a> https://github.com/IchigoJam/print/ 
