--- a/fr/TOUCHTYPING.html
+++ b/fr/TOUCHTYPING.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Touch Typing - IchigoJam</title>
+<title>Dactylographie - IchigoJam</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
 
-<h1>Touch Typing</h1>
+<h1>Dactylographie</h1>
 
 <section>
-Touch typing to hit without looking at the keyboard is fast! fun! cool!<br>
+La saisie tactile pour frapper sans regarder le clavier est rapide ! amusant! frais!<br>
 <div id="touchtype1"></div>
 <script>make15("touchtype1", f2s(function() {/*
 10 S="JKL"
@@ -18,15 +18,15 @@ Touch typing to hit without looking at the keyboard is fast! fun! cool!<br>
 60 IF C<>K ?"MISS!":END
 70 NEXT:?TICK()/60
 */}))</script>
-Position the index finger of the right hand at "J" position, middle finger at "K", ring finger at "L".<br>
-Type quickly J, K or L that displays randomly.<br>
-Can you hit 10 times without mistakes? The target time is 8 seconds!
+Positionnez l'index de la main droite en position "J", le majeur en "K", l'annulaire en "L".<br>
+Tapez rapidement J, K ou L qui s'affiche au hasard.<br>
+Pouvez-vous frapper 10 fois sans erreur ? Le temps cible est de 8 secondes !
 </section>
 
 <section>
-After you cleared it, let's add the alphabet characters gradually.<br>
-Position the index finger of the left hand at "F".<br>
-Can you give out 8-second record with "FJKL"?
+Après l'avoir effacé, ajoutons progressivement les caractères de l'alphabet.<br>
+Positionnez l'index de la main gauche sur "F".<br>
+Pouvez-vous atteindre un temps reccord de 8 secondes avec "FJKL" ?
 <div id="touchtype2"></div>
 <script>make15("touchtype2", f2s(function() {/*
 10 S="FJKL"
@@ -34,8 +34,8 @@ Can you give out 8-second record with "FJKL"?
 </section>
 
 <section>
-The middle finger of the left hand at "D", the ring finger at "S" and the little finger at "A".<br>
-This is the home position of the touch typing!
+Le majeur de la main gauche en "D", l'annulaire en "S" et le petit doigt en "A".<br>
+C'est la position d'origine de la saisie tactile !
 <div id="touchtype3"></div>
 <script>make15("touchtype3", f2s(function() {/*
 10 S="ASDFJKL"
@@ -43,23 +43,23 @@ This is the home position of the touch typing!
 </section>
 
 <section>
-<b>Try it!</b><br>
-1. Let's give out 8-second record with "ASDFJKL"<br>
-2. Let's add "H" that press with the index finger of the right hand<br>
-3. Let's add "G" that press with the index finger of the left hand<br>
-4. Let's add "ZXCVBNM" located at bottom of keyboard<br>
-5. Let's add "QWERTYUIOP" located at top of keyboard<br>
-6. Let's give out 8-second record with all alphabet
+<b>Essayez-le!</b><br>
+1. Donnons un temps reccord de 8 secondes avec "ASDFJKL"<br>
+2. Ajoutons "H" qui s'appuie avec l'index de la main droite<br>
+3. Ajoutons "G" qui s'appuie avec l'index de la main gauche<br>
+4. Ajoutons "ZXCVBNM" situé en bas du clavier<br>
+5. Ajoutons "AZERTYUIOP" situé en haut du clavier<br>
+6. Donnons-nous un record de 8 secondes avec toutes les 26 lettres de l'alphabet.
 </section>
 
 <section>
 <div id="touchtype4"></div>
 <script>make15("touchtype4", f2s(function() {/*
-Q W E RT YU I O P 
-A S D FG HJ K L ; 
-Z X C VB NM , . / 
+A Z E RT YU I O P 
+Q S D FG HJ K L ; 
+W X C VB NM , . / 
 */}))</script>
-Key assignment table of each finger
+Tableau d'affectation des touches de chaque doigt
 </section>
 
 <div id="credit"><a href=https://github.com/IchigoJam/print>CC BY on GitHub</a> <a href="https://ichigojam.github.io/print/en/">IchigoJam print</a> https://ichigojam.github.io/print/en/ <a href="http://ichigojam.net/">IchigoJam&reg;jig.jp</a><br>
