--- a/v2/index.html
+++ b/v2/index.html
@@ -21,7 +21,7 @@ for (const d of data) {
 <hr>
 <div id="credit">
 	<a href=https://creativecommons.org/licenses/by/4.0/deed.ja>CC BY</a>
-	<a href="../">IchigoJamプリント v2</a>
+	<a href="./">IchigoJamプリント v2</a>
 	<a href="https://ichigojam.net/">IchigoJam&reg;jig.jp</a>
 </div>
 
