--- a/v2/index.html
+++ b/v2/index.html
@@ -30,6 +30,7 @@ for (const d of data) {
 ul {
   list-style-type: none;
   text-align: left;
+  display: inline-block;
 }
 body {
   text-align: center;
