use ichigojam-print.css

--- a/v2/1-2_LED.html
+++ b/v2/1-2_LED.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
-<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
+<link rel="stylesheet" type="text/css" href="ichigojam-print.css">
 <script type="module" src="ichigojam-print.js"></script>
 <title>1-2 はじめのいっぽ、LED1</title>
 </head><body><main>
