--- a/v2/1-4_WAIT.html
+++ b/v2/1-4_WAIT.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
-<link rel="stylesheet" type="text/css" href="ichigojamlist.css">
-<script type="module" src="ichigojam-print.js"></script>
+<link rel="stylesheet" type="text/css" href="ichigojam-print.css">
+ <script type="module" src="ichigojam-print.js"></script>
 <title>1-4 じかんをあやつる、WAIT</title>
 </head><body><main>
 
