--- a/en/NINEPUZZLE.html
+++ b/en/NINEPUZZLE.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
-<title>Nine Puzzle/title>
+<title>Nine Puzzle</title>
 <link rel="stylesheet" type="text/css" href="ichigojamlist.css">
 <script src="ichigojamlist.js"></script>
 </head><body>
